dataset1235/2025-2/2318198438/users/323753343/executions/2445341515_604674078.log
== RUN (2025-09-02 00:58:15)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
None
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
None
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
None
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
None
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
None
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:51:02)
-- CODE: 
float("7")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
None
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
None
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
None
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
None
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
None
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:01:10)
-- CODE: 
input("float")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
float
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
float
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
float
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
float
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
float
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:02:48)
-- CODE: 
input("float")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
float
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
float
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
float
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
float
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
float
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:00:34)
-- CODE: 
input("float")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
float
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
float
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
float
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
float
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
float
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:51:05)
-- CODE: 
float("7")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
None
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
None
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
None
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
None
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
None
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:00:00)
-- CODE: 
input"float"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 1
    input"float"
         ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:50:13)
-- CODE: 
float("valorEmReais")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("valorEmReais")
ValueError: could not convert string to float: 'valorEmReais'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:35:07)
-- CODE: 
float(input)(valorEmReais))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 1
    float(input)(valorEmReais))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:49:37)
-- CODE: 
float("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float("input")
ValueError: could not convert string to float: 'input'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:00:07)
-- CODE: 
input "float"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 1
    input "float"
          ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
